--- a/web/views/index.erb
+++ b/web/views/index.erb
@@ -21,11 +21,12 @@
       <tr>
         <th>Name</th>
         <th>Neighbourhood</th>
-        <th>Online</th>
-        <th>Last Seen</th>
-        <th>Last Restart</th>
-        <th>First Seen</th>
+        <th>Nara</th>
+        <th>Last Ping</th>
+        <th>Nara Uptime</th>
+        <th>Nara Lifetime</th>
         <th>Restarts</th>
+        <th>Host Uptime</th>
       </tr>
     </table>
   <script>
@@ -43,6 +44,7 @@
                       $nara.append($("<td>").addClass("last_restart"))
                       $nara.append($("<td>").addClass("first_seen"))
                       $nara.append($("<td>").addClass("restarts"))
+                      $nara.append($("<td>").addClass("uptime"))
                       $naras.append($nara);
                 }
                 $nara.find(".name").text(name)
@@ -50,8 +52,10 @@
                 $nara.find(".online").text(ver.Online)
                 $nara.find(".restarts").text(ver.Restarts)
                 $nara.find(".last_seen").text(moment(ver.LastSeen * 1000).fromNow())
-                $nara.find(".last_restart").text(moment(ver.LastRestart * 1000).fromNow())
-                $nara.find(".first_seen").text(moment(ver.StartTime * 1000).fromNow())
+                $nara.find(".last_restart").text(moment(ver.LastRestart * 1000).fromNow(true ))
+                $nara.find(".first_seen").text(moment(ver.StartTime * 1000).fromNow(true))
+                var uptime = moment().to((moment().unix() - data.HostStats.Uptime) * 1000, true);
+                $nara.find(".uptime").text(uptime)
               }
           var updateNaras = function(data) {
                 for (const name in data) {
