--- a/web/views/index.erb
+++ b/web/views/index.erb
@@ -21,5 +21,6 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
   <script src="nara.js" type="text/babel"></script>
+  <span> rendered by <%= NaraWeb.hostname %></span>
   </body>
 </html>
