--- a/web/views/index.erb
+++ b/web/views/index.erb
@@ -13,6 +13,8 @@
       text-align: left;
     }
     .name { font-weight: bold; }
+    a { text-decoration: none; color: black; }
+    a:hover { text-decoration: underline; color: black; }
   </style>
   </head>
   <body>
